<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/toolbar"
    tools:context=".TmsApplication">

    <!--android:background="@drawable/gradient_background"-->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:id="@+id/logoLayout"
        android:gravity="center">
    <ImageView
        android:id="@+id/Logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/tms"
        android:layout_centerHorizontal="true"
        app:srcCompat="@drawable/logo3" />
    </RelativeLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/loginInputLayout"
        android:layout_width="match_parent"
        android:layout_below="@+id/logoLayout"
        android:layout_height="64dp"
        android:layout_marginTop="30dp"
        android:hint="@string/login"
        android:textColorHint="@color/maciek">

        <EditText
            android:id="@+id/EditLogin"
            android:layout_width="280dp"
            android:layout_height="56dp"
            android:layout_gravity="center"
            android:ems="10"
            android:colorControlActivated="@color/maciek"
            android:colorControlNormal="@color/maciek"
            android:colorControlHighlight="@color/maciek"
            android:backgroundTint="@color/maciek"
            android:inputType="textPersonName"
            android:textColor="@color/maciek"
            android:textSize="16sp"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/passwordInputLayout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/loginInputLayout"
        android:layout_marginTop="10dp"
        android:hint="@string/haslo"
        android:textColorHint="@color/maciek">

        <EditText
            android:id="@+id/EditPassword"
            android:layout_width="280dp"
            android:layout_height="56dp"
            android:layout_gravity="center"
            android:layout_marginBottom="244dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:ems="10"
            android:inputType="textPassword"
            android:textColor="@color/maciek"
            android:textSize="16sp"
            android:colorControlActivated="@color/maciek"
            android:colorControlNormal="@color/maciek"
            android:colorControlHighlight="@color/maciek"
            android:backgroundTint="@color/maciek"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.49"
            app:layout_constraintStart_toStartOf="parent" />

    </android.support.design.widget.TextInputLayout>


    <Button
        android:id="@+id/LogBtn"
        android:layout_width="280dp"
        android:layout_below="@+id/passwordInputLayout"
        android:layout_marginTop="70dp"
        android:gravity="center"
        android:layout_height="40dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/loginbutton"
        android:text="@string/Login_button"
        android:textColor="@color/maciek"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textStyle="bold" />


</RelativeLayout>