<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StatusPage.StatusActivity"
    android:background="@color/backgroundColor">

    <include
        android:id="@+id/toolbarDetails"
        layout="@layout/toolbar"/>
    <RelativeLayout
        android:id="@+id/listLayout"
        android:layout_width="wrap_content"
        android:layout_height="140dp"
        android:layout_below="@id/toolbarDetails">

    <ListView
        android:id="@+id/statusList"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:textColor="@color/maciek">
    </ListView>
    </RelativeLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/problemInputLayout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:layout_below="@id/listLayout"
        android:backgroundTint="@color/white"
        android:hint="@string/wiadomosc"
        android:textColorHint="@color/maciek">

        <EditText
            android:id="@+id/EditProblem"
            android:layout_width="280dp"
            android:layout_height="56dp"
            android:layout_gravity="center"
            android:layout_marginBottom="244dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:ems="10"
            android:inputType="textMultiLine"
            android:textColor="@color/maciek"
            android:colorControlActivated="@color/maciek"
            android:colorControlNormal="@color/maciek"
            android:backgroundTint="@color/maciek"
            android:textSize="16sp" />

    </android.support.design.widget.TextInputLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/problemInputLayout"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp">
    <Button
        android:id="@+id/buttonStatus"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="40dp"

        android:text="@string/wybierz_status"
        android:padding="5dp"
        android:visibility="visible"
        android:background="@drawable/loginbutton"
        android:textColor="@color/maciek"
        android:textStyle="bold"
        />

    <Button
        android:id="@+id/sendStatus"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/buttonStatus"
        android:background="@drawable/loginbutton"
        android:text="@string/wyslij_status"
        android:textColor="@color/maciek"
        android:visibility="visible"
        android:padding="5dp"
        android:textStyle="bold" />

    </RelativeLayout>

</RelativeLayout>