<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PasswordPage.PasswordActivity"
    android:background="@color/backgroundColor">

    <include
        android:id="@+id/toolbarDetails"
        layout="@layout/toolbar"/>
    <RelativeLayout
        android:layout_below="@id/toolbarDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="30dp">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/oldPasswordInput"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"

        android:hint="@string/oldPassword"
        android:textColorHint="@color/maciek">

        <EditText
            android:id="@+id/oldPassword"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_gravity="center"
            android:layout_marginBottom="244dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:ems="10"
            android:inputType="textPassword"
            android:textColor="@color/maciek"
            android:textSize="16sp"
            android:colorControlActivated="@color/maciek"
            android:colorControlNormal="@color/maciek"
            android:backgroundTint="@color/maciek" />

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/newPasswordInput"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/oldPasswordInput"
        android:layout_marginTop="10dp"
        android:hint="@string/newPassword"
        android:textColorHint="@color/maciek">

        <EditText
            android:id="@+id/newPassword"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_gravity="center"
            android:layout_marginBottom="244dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:ems="10"
            android:inputType="textPassword"
            android:textColor="@color/maciek"
            android:textSize="16sp"
            android:colorControlActivated="@color/maciek"
            android:colorControlNormal="@color/maciek"
            android:backgroundTint="@color/maciek" />

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/newRePasswordInput"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/newPasswordInput"
        android:layout_marginTop="10dp"
        android:hint="@string/newRePassword"
        android:textColorHint="@color/maciek">

        <EditText
            android:id="@+id/newRePassword"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_gravity="center"
            android:layout_marginBottom="244dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:ems="10"
            android:inputType="textPassword"
            android:textColor="@color/maciek"
            android:textSize="16sp"
            android:colorControlActivated="@color/maciek"
            android:colorControlNormal="@color/maciek"
            android:backgroundTint="@color/maciek" />

    </android.support.design.widget.TextInputLayout>

    <RelativeLayout
        android:layout_below="@id/newRePasswordInput"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="end"
        android:layout_marginTop="20dp">
    <Button
        android:id="@+id/approvePassword"
        android:layout_width="match_parent"
        android:layout_marginTop="20dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_height="40dp"
        android:background="@drawable/loginbutton"
        android:padding="5dp"
        android:textColor="@color/maciek"
        android:text="@string/approve"
        android:textStyle="bold" />

    </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>