<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".DeliveryPage.DeliveryActivity"
    android:background="@color/backgroundColor">

    <include
        android:id="@+id/toolbarDetails"
        layout="@layout/toolbar"/>

    <RelativeLayout
        android:id="@+id/relativeList"
        android:layout_below="@id/toolbarDetails"
        android:layout_width="match_parent"
        android:layout_height="70dp">
        <ListView
            android:id="@+id/clientDeliveryName"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@color/maciek">
        </ListView>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="360dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/relativeList">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="360dp"
            android:background="@color/gray"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="8dp"
            app:cardBackgroundColor="@color/toolbar">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="4dp"
                android:text="@string/delivery"
                android:textSize="22sp"
                android:textColor="@color/maciek"
                android:textStyle="bold" />


            <android.support.design.widget.TextInputLayout
                android:id="@+id/titleInputLayout"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="37dp"
                android:backgroundTint="@color/white"
                android:hint="@string/tytul"
                android:textColorHint="@color/maciek">

                <EditText
                    android:id="@+id/EditTitle"
                    android:layout_width="280dp"
                    android:layout_height="56dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="244dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:ems="10"
                    android:inputType="text"
                    android:textColor="@color/maciek"
                    android:textSize="16sp"
                    android:colorControlActivated="@color/maciek"
                    android:colorControlNormal="@color/maciek"
                    android:backgroundTint="@color/maciek" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/DescriptionInputLayout"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="105dp"
                android:backgroundTint="@color/maciek"
                android:hint="@string/opis"
                android:textColorHint="@color/maciek">

                <EditText
                    android:id="@+id/EditDescription"
                    android:layout_width="280dp"
                    android:layout_height="56dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="244dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:ems="10"
                    android:inputType="textMultiLine"
                    android:textColor="@color/maciek"
                    android:textSize="16sp"
                    android:colorControlActivated="@color/maciek"
                    android:colorControlNormal="@color/maciek"
                    android:backgroundTint="@color/maciek" />

            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:id="@+id/liniowyLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginBottom="80dp"
                android:layout_marginStart="15dp"
                >

                <android.support.v7.widget.CardView
                    android:id="@+id/imageCard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/imageView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/button_background"
                        android:textColor="@color/maciek" />

                </android.support.v7.widget.CardView>

            </LinearLayout>

            <Button
                android:id="@+id/attachmentButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginBottom="10dp"
                android:layout_marginStart="10dp"
                android:background="@drawable/loginbutton"
                android:padding="5dp"
                android:text="@string/addAttachment"
                android:textColor="@color/maciek"
                android:textStyle="bold" />

        </android.support.v7.widget.CardView>
    </RelativeLayout>

    <Button
        android:id="@+id/sendDataButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="26dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/loginbutton"
        android:text="@string/send"
        android:textColor="@color/maciek"
        android:textStyle="bold" />

</RelativeLayout>