<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/parent_layout"
    android:layout_width="match_parent"
    android:layout_height="120dp"
    android:elevation="3dp"
    android:orientation="vertical"
    android:padding="5dp"
    >

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardBackgroundColor="@color/toolbar"
        app:cardCornerRadius="4dp"
        app:cardElevation="10dp"
        app:contentPadding="10dp">

    <ImageView
        android:id="@+id/orders"
        android:layout_width="100dp"
        android:layout_height="80dp"
        android:layout_gravity="end"
        android:scaleType="centerInside"
        android:src="@drawable/ic_icon_docs"
        />

        <LinearLayout
            android:layout_width="220dp"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/clientName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/number"
                android:textColor="@color/maciek"
                android:singleLine="false"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/maciek"
                android:singleLine="false"
                android:textSize="18sp"
                android:textStyle="bold"
                android:id="@+id/orderNumber" />
        </LinearLayout>

        <LinearLayout

            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/loadDate"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:textSize="14sp"
                android:textColor="@color/maciek"
                android:id="@+id/loadDateText" />

            <TextView
                android:id="@+id/loadDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/maciek"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="58dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/maciek"
                android:text="@string/unloadDate"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/unloadDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/maciek"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:textSize="14sp" />

        </LinearLayout>

    </android.support.v7.widget.CardView>
</LinearLayout>